--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "broccoli-plugin": "^1.3.0"
   },
   "devDependencies": {
+    "broccoli-fixture": "^1.0.0",
     "broccoli-funnel": "^1.1.0",
     "chai": "^3.5.0",
     "mocha": "^3.2.0"
