--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "broccoli-plugin"
   ],
   "dependencies": {
-    "broccoli-plugin": "^1.3.0"
+    "broccoli-plugin": "^1.3.0",
+    "walk-sync": "^0.3.1"
   },
   "devDependencies": {
     "broccoli-fixture": "^1.0.0",
