--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "repository": "https://github.com/glimmerjs/resolution-map-builder",
   "license": "MIT",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "mocha"
   },
