--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "broccoli-fixture": "^1.0.0",
     "broccoli-funnel": "^1.1.0",
     "chai": "^3.5.0",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "mocha-eslint": "^3.0.1"
   }
 }
