--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "broccoli-plugin": "^1.3.0",
+    "silent-error": "^1.0.1",
     "walk-sync": "^0.3.1"
   },
   "devDependencies": {
