Adds tests for dot delimeter resolutions
This PR is a part of the journey to marry two component worlds of
Glimmer and Ember.

As it turns out, this works out-of-the-box.

Related [Custom Components
RFC](https://github.com/emberjs/rfcs/blob/custom-components/text/0000-custom-components.md)

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "MIT",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha test --recursive"
+    "test": "mocha test --recursive",
+    "test:debug": "mocha --no-timeouts debug"
   },
   "keywords": [
     "broccoli-plugin"
